# hprolog

./: LICENSE  hprolog.cabal  prelude.hpl  stack.yaml
src/: HProlog.hs  Main.hs  README.md  Test.hs
src/HProlog/: Expr.hs  Parse.hs  Query.hs
