name:                hprolog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hprolog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hprolog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       HProlog.Expr
                     , HProlog.Parse
                     , HProlog.Query
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , containers
                     , transformers
                     , parsec
                     , MissingH

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     HProlog.Expr
                     , HProlog.Parse
                     , HProlog.Query
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , containers
                     , transformers
                     , parsec
                     , MissingH

